lib/third/test/site/invalid_content_types/css.php
<?php 
header('Content-Type: text/css');

for($i = 0; $i < 10000; $i ++) {
	echo 'A';
}
?>